@@ -1,6 +1,5 @@
 postgresql TODO
 ===============
 
-- Provide do.maintenance which vacuums all running clusters.
 - pg_wrapper: Fix socket dir for default cluster if there is more than
   one cluster and no user-cluster map entry.
